Fixed shifting row heigh problem
Wasn't an issue until I starting using symbols.

--- a/css/app.css
+++ b/css/app.css
@@ -41,6 +41,7 @@ body {
   display: inherit;
   flex-direction: row;
   flex-grow: 1;
+  flex-basis: 0;
   align-content: space-between;
   justify-content: space-between;
 }
